--- a/css/InputForm.css
+++ b/css/InputForm.css
@@ -46,3 +46,14 @@
       font-style: italic;
       color: red;
     }
+
+    @media only screen and (max-width: 500px) {
+        h1{
+            font-size: 25px;
+            text-align: center;
+          }
+          label{
+            width: 40%;
+            font-size: 14px;
+          }
+    }
